Sheet7/parser.output
Terminals which are not used

   Token_error
   Token_repeat
   Token_until


State 99 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: Token_program Token_identifier Token_semicolon varDec compStmt Token_dot

    2 varDec: Token_var varDecList
    3       | /* empty */

    4 varDecList: varDecList identListType Token_semicolon
    5           | identListType Token_semicolon

    6 identListType: identList Token_colon type

    7 identList: identList Token_comma Token_identifier
    8          | Token_identifier

    9 type: simpleType
   10     | Token_array Token_lRectBracket Token_Integer Token_dot Token_dot Token_Integer Token_rRectBracket Token_of simpleType

   11 simpleType: Token_integer
   12           | Token_real
   13           | Token_string

   14 compStmt: Token_begin stmtList Token_end

   15 stmtList: stmtList Token_semicolon statement
   16         | statement

   17 statement: assignStmt
   18          | compStmt
   19          | ifStmt
   20          | whileStmt
   21          | forStmt
   22          | Token_read Token_lBracket exprList Token_rBracket
   23          | Token_write Token_lBracket exprList Token_rBracket

   24 assignStmt: Token_identifier Token_assign expr
   25           | Token_identifier index Token_assign expr

   26 index: Token_lRectBracket expr Token_rRectBracket

   27 ifStmt: Token_if expr Token_then statement elsePart

   28 elsePart: Token_else statement
   29         | /* empty */

   30 whileStmt: Token_while expr Token_do statement

   31 forStmt: Token_for Token_identifier Token_assign expr toPart expr Token_do statement

   32 toPart: Token_to
   33       | Token_downTo

   34 exprList: exprList Token_comma expr
   35         | expr

   36 expr: simpleExpr relOp simpleExpr
   37     | simpleExpr

   38 simpleExpr: simpleExpr addOp term
   39           | term

   40 term: term mulOp factor
   41     | factor

   42 factor: Token_Integer
   43       | Token_Real
   44       | Token_String
   45       | Token_false
   46       | Token_true
   47       | Token_identifier
   48       | Token_identifier index
   49       | Token_not factor
   50       | Token_sub factor
   51       | Token_lBracket expr Token_rBracket

   52 relOp: Token_less
   53      | Token_leq
   54      | Token_bigger
   55      | Token_beq
   56      | Token_eq
   57      | Token_noteq

   58 addOp: Token_add
   59      | Token_sub
   60      | Token_or

   61 mulOp: Token_mult
   62      | Token_divide
   63      | Token_div
   64      | Token_mod
   65      | Token_and


Terminals, with rules where they appear

$end (0) 0
error (256)
Token_add (258) 58
Token_and (259) 65
Token_array (260) 10
Token_assign (261) 24 25 31
Token_begin (262) 14
Token_beq (263) 55
Token_bigger (264) 54
Token_colon (265) 6
Token_comma (266) 7 34
Token_div (267) 63
Token_divide (268) 62
Token_do (269) 30 31
Token_dot (270) 1 10
Token_downTo (271) 33
Token_else (272) 28
Token_end (273) 14
Token_eq (274) 56
Token_error (275)
Token_false (276) 45
Token_for (277) 31
Token_identifier (278) 1 7 8 24 25 31 47 48
Token_if (279) 27
Token_Integer (280) 10 42
Token_integer (281) 11
Token_lBracket (282) 22 23 51
Token_leq (283) 53
Token_less (284) 52
Token_lRectBracket (285) 10 26
Token_mod (286) 64
Token_mult (287) 61
Token_not (288) 49
Token_noteq (289) 57
Token_of (290) 10
Token_or (291) 60
Token_program (292) 1
Token_rBracket (293) 22 23 51
Token_read (294) 22
Token_Real (295) 43
Token_real (296) 12
Token_repeat (297)
Token_rRectBracket (298) 10 26
Token_semicolon (299) 1 4 5 15
Token_String (300) 44
Token_string (301) 13
Token_sub (302) 50 59
Token_then (303) 27
Token_to (304) 32
Token_true (305) 46
Token_until (306)
Token_var (307) 2
Token_while (308) 30
Token_write (309) 23


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
start (56)
    on left: 1, on right: 0
varDec (57)
    on left: 2 3, on right: 1
varDecList (58)
    on left: 4 5, on right: 2 4
identListType (59)
    on left: 6, on right: 4 5
identList (60)
    on left: 7 8, on right: 6 7
type (61)
    on left: 9 10, on right: 6
simpleType (62)
    on left: 11 12 13, on right: 9 10
compStmt (63)
    on left: 14, on right: 1 18
stmtList (64)
    on left: 15 16, on right: 14 15
statement (65)
    on left: 17 18 19 20 21 22 23, on right: 15 16 27 28 30 31
assignStmt (66)
    on left: 24 25, on right: 17
index (67)
    on left: 26, on right: 25 48
ifStmt (68)
    on left: 27, on right: 19
elsePart (69)
    on left: 28 29, on right: 27
whileStmt (70)
    on left: 30, on right: 20
forStmt (71)
    on left: 31, on right: 21
toPart (72)
    on left: 32 33, on right: 31
exprList (73)
    on left: 34 35, on right: 22 23 34
expr (74)
    on left: 36 37, on right: 24 25 26 27 30 31 34 35 51
simpleExpr (75)
    on left: 38 39, on right: 36 37 38
term (76)
    on left: 40 41, on right: 38 39 40
factor (77)
    on left: 42 43 44 45 46 47 48 49 50 51, on right: 40 41 49 50
relOp (78)
    on left: 52 53 54 55 56 57, on right: 36
addOp (79)
    on left: 58 59 60, on right: 38
mulOp (80)
    on left: 61 62 63 64 65, on right: 40


state 0

    0 $accept: . start $end

    Token_program  shift, and go to state 1

    start  go to state 2


state 1

    1 start: Token_program . Token_identifier Token_semicolon varDec compStmt Token_dot

    Token_identifier  shift, and go to state 3


state 2

    0 $accept: start . $end

    $end  shift, and go to state 4


state 3

    1 start: Token_program Token_identifier . Token_semicolon varDec compStmt Token_dot

    Token_semicolon  shift, and go to state 5


state 4

    0 $accept: start $end .

    $default  accept


state 5

    1 start: Token_program Token_identifier Token_semicolon . varDec compStmt Token_dot

    Token_var  shift, and go to state 6

    $default  reduce using rule 3 (varDec)

    varDec  go to state 7


state 6

    2 varDec: Token_var . varDecList

    Token_identifier  shift, and go to state 8

    varDecList     go to state 9
    identListType  go to state 10
    identList      go to state 11


state 7

    1 start: Token_program Token_identifier Token_semicolon varDec . compStmt Token_dot

    Token_begin  shift, and go to state 12

    compStmt  go to state 13


state 8

    8 identList: Token_identifier .

    $default  reduce using rule 8 (identList)


state 9

    2 varDec: Token_var varDecList .
    4 varDecList: varDecList . identListType Token_semicolon

    Token_identifier  shift, and go to state 8

    $default  reduce using rule 2 (varDec)

    identListType  go to state 14
    identList      go to state 11


state 10

    5 varDecList: identListType . Token_semicolon

    Token_semicolon  shift, and go to state 15


state 11

    6 identListType: identList . Token_colon type
    7 identList: identList . Token_comma Token_identifier

    Token_colon  shift, and go to state 16
    Token_comma  shift, and go to state 17


state 12

   14 compStmt: Token_begin . stmtList Token_end

    Token_begin       shift, and go to state 12
    Token_for         shift, and go to state 18
    Token_identifier  shift, and go to state 19
    Token_if          shift, and go to state 20
    Token_read        shift, and go to state 21
    Token_while       shift, and go to state 22
    Token_write       shift, and go to state 23

    compStmt    go to state 24
    stmtList    go to state 25
    statement   go to state 26
    assignStmt  go to state 27
    ifStmt      go to state 28
    whileStmt   go to state 29
    forStmt     go to state 30


state 13

    1 start: Token_program Token_identifier Token_semicolon varDec compStmt . Token_dot

    Token_dot  shift, and go to state 31


state 14

    4 varDecList: varDecList identListType . Token_semicolon

    Token_semicolon  shift, and go to state 32


state 15

    5 varDecList: identListType Token_semicolon .

    $default  reduce using rule 5 (varDecList)


state 16

    6 identListType: identList Token_colon . type

    Token_array    shift, and go to state 33
    Token_integer  shift, and go to state 34
    Token_real     shift, and go to state 35
    Token_string   shift, and go to state 36

    type        go to state 37
    simpleType  go to state 38


state 17

    7 identList: identList Token_comma . Token_identifier

    Token_identifier  shift, and go to state 39


state 18

   31 forStmt: Token_for . Token_identifier Token_assign expr toPart expr Token_do statement

    Token_identifier  shift, and go to state 40


state 19

   24 assignStmt: Token_identifier . Token_assign expr
   25           | Token_identifier . index Token_assign expr

    Token_assign        shift, and go to state 41
    Token_lRectBracket  shift, and go to state 42

    index  go to state 43


state 20

   27 ifStmt: Token_if . expr Token_then statement elsePart

    Token_false       shift, and go to state 44
    Token_identifier  shift, and go to state 45
    Token_Integer     shift, and go to state 46
    Token_lBracket    shift, and go to state 47
    Token_not         shift, and go to state 48
    Token_Real        shift, and go to state 49
    Token_String      shift, and go to state 50
    Token_sub         shift, and go to state 51
    Token_true        shift, and go to state 52

    expr        go to state 53
    simpleExpr  go to state 54
    term        go to state 55
    factor      go to state 56


state 21

   22 statement: Token_read . Token_lBracket exprList Token_rBracket

    Token_lBracket  shift, and go to state 57


state 22

   30 whileStmt: Token_while . expr Token_do statement

    Token_false       shift, and go to state 44
    Token_identifier  shift, and go to state 45
    Token_Integer     shift, and go to state 46
    Token_lBracket    shift, and go to state 47
    Token_not         shift, and go to state 48
    Token_Real        shift, and go to state 49
    Token_String      shift, and go to state 50
    Token_sub         shift, and go to state 51
    Token_true        shift, and go to state 52

    expr        go to state 58
    simpleExpr  go to state 54
    term        go to state 55
    factor      go to state 56


state 23

   23 statement: Token_write . Token_lBracket exprList Token_rBracket

    Token_lBracket  shift, and go to state 59


state 24

   18 statement: compStmt .

    $default  reduce using rule 18 (statement)


state 25

   14 compStmt: Token_begin stmtList . Token_end
   15 stmtList: stmtList . Token_semicolon statement

    Token_end        shift, and go to state 60
    Token_semicolon  shift, and go to state 61


state 26

   16 stmtList: statement .

    $default  reduce using rule 16 (stmtList)


state 27

   17 statement: assignStmt .

    $default  reduce using rule 17 (statement)


state 28

   19 statement: ifStmt .

    $default  reduce using rule 19 (statement)


state 29

   20 statement: whileStmt .

    $default  reduce using rule 20 (statement)


state 30

   21 statement: forStmt .

    $default  reduce using rule 21 (statement)


state 31

    1 start: Token_program Token_identifier Token_semicolon varDec compStmt Token_dot .

    $default  reduce using rule 1 (start)


state 32

    4 varDecList: varDecList identListType Token_semicolon .

    $default  reduce using rule 4 (varDecList)


state 33

   10 type: Token_array . Token_lRectBracket Token_Integer Token_dot Token_dot Token_Integer Token_rRectBracket Token_of simpleType

    Token_lRectBracket  shift, and go to state 62


state 34

   11 simpleType: Token_integer .

    $default  reduce using rule 11 (simpleType)


state 35

   12 simpleType: Token_real .

    $default  reduce using rule 12 (simpleType)


state 36

   13 simpleType: Token_string .

    $default  reduce using rule 13 (simpleType)


state 37

    6 identListType: identList Token_colon type .

    $default  reduce using rule 6 (identListType)


state 38

    9 type: simpleType .

    $default  reduce using rule 9 (type)


state 39

    7 identList: identList Token_comma Token_identifier .

    $default  reduce using rule 7 (identList)


state 40

   31 forStmt: Token_for Token_identifier . Token_assign expr toPart expr Token_do statement

    Token_assign  shift, and go to state 63


state 41

   24 assignStmt: Token_identifier Token_assign . expr

    Token_false       shift, and go to state 44
    Token_identifier  shift, and go to state 45
    Token_Integer     shift, and go to state 46
    Token_lBracket    shift, and go to state 47
    Token_not         shift, and go to state 48
    Token_Real        shift, and go to state 49
    Token_String      shift, and go to state 50
    Token_sub         shift, and go to state 51
    Token_true        shift, and go to state 52

    expr        go to state 64
    simpleExpr  go to state 54
    term        go to state 55
    factor      go to state 56


state 42

   26 index: Token_lRectBracket . expr Token_rRectBracket

    Token_false       shift, and go to state 44
    Token_identifier  shift, and go to state 45
    Token_Integer     shift, and go to state 46
    Token_lBracket    shift, and go to state 47
    Token_not         shift, and go to state 48
    Token_Real        shift, and go to state 49
    Token_String      shift, and go to state 50
    Token_sub         shift, and go to state 51
    Token_true        shift, and go to state 52

    expr        go to state 65
    simpleExpr  go to state 54
    term        go to state 55
    factor      go to state 56


state 43

   25 assignStmt: Token_identifier index . Token_assign expr

    Token_assign  shift, and go to state 66


state 44

   45 factor: Token_false .

    $default  reduce using rule 45 (factor)


state 45

   47 factor: Token_identifier .
   48       | Token_identifier . index

    Token_lRectBracket  shift, and go to state 42

    $default  reduce using rule 47 (factor)

    index  go to state 67


state 46

   42 factor: Token_Integer .

    $default  reduce using rule 42 (factor)


state 47

   51 factor: Token_lBracket . expr Token_rBracket

    Token_false       shift, and go to state 44
    Token_identifier  shift, and go to state 45
    Token_Integer     shift, and go to state 46
    Token_lBracket    shift, and go to state 47
    Token_not         shift, and go to state 48
    Token_Real        shift, and go to state 49
    Token_String      shift, and go to state 50
    Token_sub         shift, and go to state 51
    Token_true        shift, and go to state 52

    expr        go to state 68
    simpleExpr  go to state 54
    term        go to state 55
    factor      go to state 56


state 48

   49 factor: Token_not . factor

    Token_false       shift, and go to state 44
    Token_identifier  shift, and go to state 45
    Token_Integer     shift, and go to state 46
    Token_lBracket    shift, and go to state 47
    Token_not         shift, and go to state 48
    Token_Real        shift, and go to state 49
    Token_String      shift, and go to state 50
    Token_sub         shift, and go to state 51
    Token_true        shift, and go to state 52

    factor  go to state 69


state 49

   43 factor: Token_Real .

    $default  reduce using rule 43 (factor)


state 50

   44 factor: Token_String .

    $default  reduce using rule 44 (factor)


state 51

   50 factor: Token_sub . factor

    Token_false       shift, and go to state 44
    Token_identifier  shift, and go to state 45
    Token_Integer     shift, and go to state 46
    Token_lBracket    shift, and go to state 47
    Token_not         shift, and go to state 48
    Token_Real        shift, and go to state 49
    Token_String      shift, and go to state 50
    Token_sub         shift, and go to state 51
    Token_true        shift, and go to state 52

    factor  go to state 70


state 52

   46 factor: Token_true .

    $default  reduce using rule 46 (factor)


state 53

   27 ifStmt: Token_if expr . Token_then statement elsePart

    Token_then  shift, and go to state 71


state 54

   36 expr: simpleExpr . relOp simpleExpr
   37     | simpleExpr .
   38 simpleExpr: simpleExpr . addOp term

    Token_add     shift, and go to state 72
    Token_beq     shift, and go to state 73
    Token_bigger  shift, and go to state 74
    Token_eq      shift, and go to state 75
    Token_leq     shift, and go to state 76
    Token_less    shift, and go to state 77
    Token_noteq   shift, and go to state 78
    Token_or      shift, and go to state 79
    Token_sub     shift, and go to state 80

    $default  reduce using rule 37 (expr)

    relOp  go to state 81
    addOp  go to state 82


state 55

   39 simpleExpr: term .
   40 term: term . mulOp factor

    Token_and     shift, and go to state 83
    Token_div     shift, and go to state 84
    Token_divide  shift, and go to state 85
    Token_mod     shift, and go to state 86
    Token_mult    shift, and go to state 87

    $default  reduce using rule 39 (simpleExpr)

    mulOp  go to state 88


state 56

   41 term: factor .

    $default  reduce using rule 41 (term)


state 57

   22 statement: Token_read Token_lBracket . exprList Token_rBracket

    Token_false       shift, and go to state 44
    Token_identifier  shift, and go to state 45
    Token_Integer     shift, and go to state 46
    Token_lBracket    shift, and go to state 47
    Token_not         shift, and go to state 48
    Token_Real        shift, and go to state 49
    Token_String      shift, and go to state 50
    Token_sub         shift, and go to state 51
    Token_true        shift, and go to state 52

    exprList    go to state 89
    expr        go to state 90
    simpleExpr  go to state 54
    term        go to state 55
    factor      go to state 56


state 58

   30 whileStmt: Token_while expr . Token_do statement

    Token_do  shift, and go to state 91


state 59

   23 statement: Token_write Token_lBracket . exprList Token_rBracket

    Token_false       shift, and go to state 44
    Token_identifier  shift, and go to state 45
    Token_Integer     shift, and go to state 46
    Token_lBracket    shift, and go to state 47
    Token_not         shift, and go to state 48
    Token_Real        shift, and go to state 49
    Token_String      shift, and go to state 50
    Token_sub         shift, and go to state 51
    Token_true        shift, and go to state 52

    exprList    go to state 92
    expr        go to state 90
    simpleExpr  go to state 54
    term        go to state 55
    factor      go to state 56


state 60

   14 compStmt: Token_begin stmtList Token_end .

    $default  reduce using rule 14 (compStmt)


state 61

   15 stmtList: stmtList Token_semicolon . statement

    Token_begin       shift, and go to state 12
    Token_for         shift, and go to state 18
    Token_identifier  shift, and go to state 19
    Token_if          shift, and go to state 20
    Token_read        shift, and go to state 21
    Token_while       shift, and go to state 22
    Token_write       shift, and go to state 23

    compStmt    go to state 24
    statement   go to state 93
    assignStmt  go to state 27
    ifStmt      go to state 28
    whileStmt   go to state 29
    forStmt     go to state 30


state 62

   10 type: Token_array Token_lRectBracket . Token_Integer Token_dot Token_dot Token_Integer Token_rRectBracket Token_of simpleType

    Token_Integer  shift, and go to state 94


state 63

   31 forStmt: Token_for Token_identifier Token_assign . expr toPart expr Token_do statement

    Token_false       shift, and go to state 44
    Token_identifier  shift, and go to state 45
    Token_Integer     shift, and go to state 46
    Token_lBracket    shift, and go to state 47
    Token_not         shift, and go to state 48
    Token_Real        shift, and go to state 49
    Token_String      shift, and go to state 50
    Token_sub         shift, and go to state 51
    Token_true        shift, and go to state 52

    expr        go to state 95
    simpleExpr  go to state 54
    term        go to state 55
    factor      go to state 56


state 64

   24 assignStmt: Token_identifier Token_assign expr .

    $default  reduce using rule 24 (assignStmt)


state 65

   26 index: Token_lRectBracket expr . Token_rRectBracket

    Token_rRectBracket  shift, and go to state 96


state 66

   25 assignStmt: Token_identifier index Token_assign . expr

    Token_false       shift, and go to state 44
    Token_identifier  shift, and go to state 45
    Token_Integer     shift, and go to state 46
    Token_lBracket    shift, and go to state 47
    Token_not         shift, and go to state 48
    Token_Real        shift, and go to state 49
    Token_String      shift, and go to state 50
    Token_sub         shift, and go to state 51
    Token_true        shift, and go to state 52

    expr        go to state 97
    simpleExpr  go to state 54
    term        go to state 55
    factor      go to state 56


state 67

   48 factor: Token_identifier index .

    $default  reduce using rule 48 (factor)


state 68

   51 factor: Token_lBracket expr . Token_rBracket

    Token_rBracket  shift, and go to state 98


state 69

   49 factor: Token_not factor .

    $default  reduce using rule 49 (factor)


state 70

   50 factor: Token_sub factor .

    $default  reduce using rule 50 (factor)


state 71

   27 ifStmt: Token_if expr Token_then . statement elsePart

    Token_begin       shift, and go to state 12
    Token_for         shift, and go to state 18
    Token_identifier  shift, and go to state 19
    Token_if          shift, and go to state 20
    Token_read        shift, and go to state 21
    Token_while       shift, and go to state 22
    Token_write       shift, and go to state 23

    compStmt    go to state 24
    statement   go to state 99
    assignStmt  go to state 27
    ifStmt      go to state 28
    whileStmt   go to state 29
    forStmt     go to state 30


state 72

   58 addOp: Token_add .

    $default  reduce using rule 58 (addOp)


state 73

   55 relOp: Token_beq .

    $default  reduce using rule 55 (relOp)


state 74

   54 relOp: Token_bigger .

    $default  reduce using rule 54 (relOp)


state 75

   56 relOp: Token_eq .

    $default  reduce using rule 56 (relOp)


state 76

   53 relOp: Token_leq .

    $default  reduce using rule 53 (relOp)


state 77

   52 relOp: Token_less .

    $default  reduce using rule 52 (relOp)


state 78

   57 relOp: Token_noteq .

    $default  reduce using rule 57 (relOp)


state 79

   60 addOp: Token_or .

    $default  reduce using rule 60 (addOp)


state 80

   59 addOp: Token_sub .

    $default  reduce using rule 59 (addOp)


state 81

   36 expr: simpleExpr relOp . simpleExpr

    Token_false       shift, and go to state 44
    Token_identifier  shift, and go to state 45
    Token_Integer     shift, and go to state 46
    Token_lBracket    shift, and go to state 47
    Token_not         shift, and go to state 48
    Token_Real        shift, and go to state 49
    Token_String      shift, and go to state 50
    Token_sub         shift, and go to state 51
    Token_true        shift, and go to state 52

    simpleExpr  go to state 100
    term        go to state 55
    factor      go to state 56


state 82

   38 simpleExpr: simpleExpr addOp . term

    Token_false       shift, and go to state 44
    Token_identifier  shift, and go to state 45
    Token_Integer     shift, and go to state 46
    Token_lBracket    shift, and go to state 47
    Token_not         shift, and go to state 48
    Token_Real        shift, and go to state 49
    Token_String      shift, and go to state 50
    Token_sub         shift, and go to state 51
    Token_true        shift, and go to state 52

    term    go to state 101
    factor  go to state 56


state 83

   65 mulOp: Token_and .

    $default  reduce using rule 65 (mulOp)


state 84

   63 mulOp: Token_div .

    $default  reduce using rule 63 (mulOp)


state 85

   62 mulOp: Token_divide .

    $default  reduce using rule 62 (mulOp)


state 86

   64 mulOp: Token_mod .

    $default  reduce using rule 64 (mulOp)


state 87

   61 mulOp: Token_mult .

    $default  reduce using rule 61 (mulOp)


state 88

   40 term: term mulOp . factor

    Token_false       shift, and go to state 44
    Token_identifier  shift, and go to state 45
    Token_Integer     shift, and go to state 46
    Token_lBracket    shift, and go to state 47
    Token_not         shift, and go to state 48
    Token_Real        shift, and go to state 49
    Token_String      shift, and go to state 50
    Token_sub         shift, and go to state 51
    Token_true        shift, and go to state 52

    factor  go to state 102


state 89

   22 statement: Token_read Token_lBracket exprList . Token_rBracket
   34 exprList: exprList . Token_comma expr

    Token_comma     shift, and go to state 103
    Token_rBracket  shift, and go to state 104


state 90

   35 exprList: expr .

    $default  reduce using rule 35 (exprList)


state 91

   30 whileStmt: Token_while expr Token_do . statement

    Token_begin       shift, and go to state 12
    Token_for         shift, and go to state 18
    Token_identifier  shift, and go to state 19
    Token_if          shift, and go to state 20
    Token_read        shift, and go to state 21
    Token_while       shift, and go to state 22
    Token_write       shift, and go to state 23

    compStmt    go to state 24
    statement   go to state 105
    assignStmt  go to state 27
    ifStmt      go to state 28
    whileStmt   go to state 29
    forStmt     go to state 30


state 92

   23 statement: Token_write Token_lBracket exprList . Token_rBracket
   34 exprList: exprList . Token_comma expr

    Token_comma     shift, and go to state 103
    Token_rBracket  shift, and go to state 106


state 93

   15 stmtList: stmtList Token_semicolon statement .

    $default  reduce using rule 15 (stmtList)


state 94

   10 type: Token_array Token_lRectBracket Token_Integer . Token_dot Token_dot Token_Integer Token_rRectBracket Token_of simpleType

    Token_dot  shift, and go to state 107


state 95

   31 forStmt: Token_for Token_identifier Token_assign expr . toPart expr Token_do statement

    Token_downTo  shift, and go to state 108
    Token_to      shift, and go to state 109

    toPart  go to state 110


state 96

   26 index: Token_lRectBracket expr Token_rRectBracket .

    $default  reduce using rule 26 (index)


state 97

   25 assignStmt: Token_identifier index Token_assign expr .

    $default  reduce using rule 25 (assignStmt)


state 98

   51 factor: Token_lBracket expr Token_rBracket .

    $default  reduce using rule 51 (factor)


state 99

   27 ifStmt: Token_if expr Token_then statement . elsePart

    Token_else  shift, and go to state 111

    Token_else  [reduce using rule 29 (elsePart)]
    $default    reduce using rule 29 (elsePart)

    elsePart  go to state 112


state 100

   36 expr: simpleExpr relOp simpleExpr .
   38 simpleExpr: simpleExpr . addOp term

    Token_add  shift, and go to state 72
    Token_or   shift, and go to state 79
    Token_sub  shift, and go to state 80

    $default  reduce using rule 36 (expr)

    addOp  go to state 82


state 101

   38 simpleExpr: simpleExpr addOp term .
   40 term: term . mulOp factor

    Token_and     shift, and go to state 83
    Token_div     shift, and go to state 84
    Token_divide  shift, and go to state 85
    Token_mod     shift, and go to state 86
    Token_mult    shift, and go to state 87

    $default  reduce using rule 38 (simpleExpr)

    mulOp  go to state 88


state 102

   40 term: term mulOp factor .

    $default  reduce using rule 40 (term)


state 103

   34 exprList: exprList Token_comma . expr

    Token_false       shift, and go to state 44
    Token_identifier  shift, and go to state 45
    Token_Integer     shift, and go to state 46
    Token_lBracket    shift, and go to state 47
    Token_not         shift, and go to state 48
    Token_Real        shift, and go to state 49
    Token_String      shift, and go to state 50
    Token_sub         shift, and go to state 51
    Token_true        shift, and go to state 52

    expr        go to state 113
    simpleExpr  go to state 54
    term        go to state 55
    factor      go to state 56


state 104

   22 statement: Token_read Token_lBracket exprList Token_rBracket .

    $default  reduce using rule 22 (statement)


state 105

   30 whileStmt: Token_while expr Token_do statement .

    $default  reduce using rule 30 (whileStmt)


state 106

   23 statement: Token_write Token_lBracket exprList Token_rBracket .

    $default  reduce using rule 23 (statement)


state 107

   10 type: Token_array Token_lRectBracket Token_Integer Token_dot . Token_dot Token_Integer Token_rRectBracket Token_of simpleType

    Token_dot  shift, and go to state 114


state 108

   33 toPart: Token_downTo .

    $default  reduce using rule 33 (toPart)


state 109

   32 toPart: Token_to .

    $default  reduce using rule 32 (toPart)


state 110

   31 forStmt: Token_for Token_identifier Token_assign expr toPart . expr Token_do statement

    Token_false       shift, and go to state 44
    Token_identifier  shift, and go to state 45
    Token_Integer     shift, and go to state 46
    Token_lBracket    shift, and go to state 47
    Token_not         shift, and go to state 48
    Token_Real        shift, and go to state 49
    Token_String      shift, and go to state 50
    Token_sub         shift, and go to state 51
    Token_true        shift, and go to state 52

    expr        go to state 115
    simpleExpr  go to state 54
    term        go to state 55
    factor      go to state 56


state 111

   28 elsePart: Token_else . statement

    Token_begin       shift, and go to state 12
    Token_for         shift, and go to state 18
    Token_identifier  shift, and go to state 19
    Token_if          shift, and go to state 20
    Token_read        shift, and go to state 21
    Token_while       shift, and go to state 22
    Token_write       shift, and go to state 23

    compStmt    go to state 24
    statement   go to state 116
    assignStmt  go to state 27
    ifStmt      go to state 28
    whileStmt   go to state 29
    forStmt     go to state 30


state 112

   27 ifStmt: Token_if expr Token_then statement elsePart .

    $default  reduce using rule 27 (ifStmt)


state 113

   34 exprList: exprList Token_comma expr .

    $default  reduce using rule 34 (exprList)


state 114

   10 type: Token_array Token_lRectBracket Token_Integer Token_dot Token_dot . Token_Integer Token_rRectBracket Token_of simpleType

    Token_Integer  shift, and go to state 117


state 115

   31 forStmt: Token_for Token_identifier Token_assign expr toPart expr . Token_do statement

    Token_do  shift, and go to state 118


state 116

   28 elsePart: Token_else statement .

    $default  reduce using rule 28 (elsePart)


state 117

   10 type: Token_array Token_lRectBracket Token_Integer Token_dot Token_dot Token_Integer . Token_rRectBracket Token_of simpleType

    Token_rRectBracket  shift, and go to state 119


state 118

   31 forStmt: Token_for Token_identifier Token_assign expr toPart expr Token_do . statement

    Token_begin       shift, and go to state 12
    Token_for         shift, and go to state 18
    Token_identifier  shift, and go to state 19
    Token_if          shift, and go to state 20
    Token_read        shift, and go to state 21
    Token_while       shift, and go to state 22
    Token_write       shift, and go to state 23

    compStmt    go to state 24
    statement   go to state 120
    assignStmt  go to state 27
    ifStmt      go to state 28
    whileStmt   go to state 29
    forStmt     go to state 30


state 119

   10 type: Token_array Token_lRectBracket Token_Integer Token_dot Token_dot Token_Integer Token_rRectBracket . Token_of simpleType

    Token_of  shift, and go to state 121


state 120

   31 forStmt: Token_for Token_identifier Token_assign expr toPart expr Token_do statement .

    $default  reduce using rule 31 (forStmt)


state 121

   10 type: Token_array Token_lRectBracket Token_Integer Token_dot Token_dot Token_Integer Token_rRectBracket Token_of . simpleType

    Token_integer  shift, and go to state 34
    Token_real     shift, and go to state 35
    Token_string   shift, and go to state 36

    simpleType  go to state 122


state 122

   10 type: Token_array Token_lRectBracket Token_Integer Token_dot Token_dot Token_Integer Token_rRectBracket Token_of simpleType .

    $default  reduce using rule 10 (type)
